# leanclr

./: .clang-format  .gitignore  README.md  README_EN.md
docs/: README.md  aot-rule-file-design.md  aot-rule-file.md  aot.md  unity.md
scripts/: format-cpp-files.bat
src/generator/: collect_icalls_intrinsics.py  gen_icalls_intrinsics.bat  gen_low_level_opcodes.py  hl-opcodes.xml  ll-opcodes.xml  opcode_spec_parser.py
src/leanaot/: .editorconfig  LeanAOT.sln  README.md  publish.bat
src/leanaot/LeanAOT.Core/: AssemblyCache.cs  GenericArgumentContext.cs  HashUtil.cs  IAssemblyResolver.cs  IGenerationManifest.cs  LeanAOT.Core.csproj  MetaUtil.cs  MultiDirectoryAssemblyResolver.cs  NameUtil.cs
src/leanaot/LeanAOT.GenerationPlan/: AotMethodRulesEvaluator.cs  AotRuleConflictException.cs  AotRuleDocument.cs  AotRuleGlob.cs  AssemblyPlan.cs  ClassPlan.cs  GenerationConfig.cs  GenericMethodPlan.cs  LeanAOT.GenerationPlan.csproj  Manifest.cs  MethodDefPlan.cs
src/leanaot/LeanAOT.ToCpp/: BasicBlockCollection.cs  CodeWriter.cs  ConstStrings.cs  CppGenerator.cs  DirectCallBridgeService.cs  EvalDataType.cs  EvalVariable.cs  FieldDetail.cs  ForwardDeclaration.cs  GeneratorBase.cs  GlobalConfig.cs  GlobalServices.cs  ICallOrIntrinsicMethodWriter.cs  IGenerator.cs  IMethodBodyCodeFilePart.cs  InvokerService.cs  LeanAOT.ToCpp.csproj  ManifestService.cs  MetadataService.cs  MethodDetail.cs  MethodDirectCallBridgeCodeFilePart.cs  MethodGenerationUtil.cs  MethodInvokerCodeFilePart.cs  MethodKind.cs  MethodWriter.cs  MethodWriterBase.cs  (+17 more)
src/leanaot/aot-runner/: CMakeLists.txt  aot-rules-mscorlib.xml  aot-rules-test.xml  build-wasm.bat  build.bat  gen_cpp.bat  gen_cpp_wasm.bat  main.cpp  run.bat
src/runtime/: CMakeLists.txt  build.bat  build_config.h
src/runtime/alloc/: general_allocation.cpp  general_allocation.h  general_allocator.h  mem_pool.cpp  mem_pool.h  metadata_allocation.cpp  metadata_allocation.h
src/runtime/codegen/: leanclr_common.cpp  leanclr_common.h
src/runtime/core/: rt_base.cpp  rt_base.h  rt_err.h  rt_result.h  stl_compat.h
src/runtime/gc/: garbage_collector.cpp  garbage_collector.h
src/runtime/icalls/: icall_base.h  internal_call_stubs.cpp  internal_call_stubs.h  interop.cpp  interop.h  mono_runtimeclasshandle.cpp  mono_runtimeclasshandle.h  mono_runtimegptrarrayhandle.cpp  mono_runtimegptrarrayhandle.h  mono_runtimemarshal.cpp  mono_runtimemarshal.h  mono_safestringmarshal.cpp  mono_safestringmarshal.h  system_appdomain.cpp  system_appdomain.h  system_argiterator.cpp  system_argiterator.h  system_array.cpp  system_array.h  system_buffer.cpp  system_buffer.h  system_currentsystemtimezone.cpp  system_currentsystemtimezone.h  system_datetime.cpp  system_datetime.h  system_delegate.cpp  system_delegate.h  system_diagnostics_debugger.cpp  system_diagnostics_debugger.h  system_diagnostics_stackframe.cpp  system_diagnostics_stackframe.h  system_diagnostics_stacktrace.cpp  system_diagnostics_stacktrace.h  system_diagnostics_stopwatch.cpp  system_diagnostics_stopwatch.h  system_enum.cpp  system_enum.h  system_environment.cpp  system_environment.h  system_exception.cpp  (+91 more)
src/runtime/interp/: basic_block_splitter.cpp  basic_block_splitter.h  eval_stack_op.h  execution_helper.h  hl_opcodes.h  hl_transformer.cpp  hl_transformer.h  il_opcodes.cpp  il_opcodes.h  interp_defs.cpp  interp_defs.h  interpreter.cpp  interpreter.h  ll_opcodes.cpp  ll_opcodes.h  ll_transformer.cpp  ll_transformer.h  machine_state.cpp  machine_state.h  transform_defs.h
src/runtime/intrinsics/: intrinsic_stubs.cpp  intrinsic_stubs.h  system_array.cpp  system_array.h  system_numerics_vector.cpp  system_numerics_vector.h  system_object.cpp  system_object.h  system_readonlyspan.cpp  system_readonlyspan.h  system_span.cpp  system_span.h  system_string.cpp  system_string.h  system_threading_interlocked.cpp  system_threading_interlocked.h  system_threading_volatile.cpp  system_threading_volatile.h
src/runtime/log/: internal_logger.cpp  internal_logger.h
src/runtime/metadata/: aot_module.cpp  aot_module.h  cli_image.cpp  cli_image.h  cli_metadata.h  generic_metadata.cpp  generic_metadata.h  layout.cpp  layout.h  metadata_cache.cpp  metadata_cache.h  metadata_compare.cpp  metadata_compare.h  metadata_const.cpp  metadata_const.h  metadata_hash.cpp  metadata_hash.h  metadata_name.cpp  metadata_name.h  module_def.cpp  module_def.h  pdb_image.cpp  pdb_image.h  pe_image_reader.cpp  pe_image_reader.h  rt_metadata.cpp  rt_metadata.h
src/runtime/misc/: rng_crypto_service_provider.cpp  rng_crypto_service_provider.h
src/runtime/pch/: pch-cpp.hpp
src/runtime/platform/: architecture.cpp  architecture.h  bcrypt.cpp  bcrypt.h  hardware.h  kernel32.cpp  kernel32.h  rt_event.cpp  rt_event.h  rt_file.cpp  rt_file.h  rt_io_error_internal.h  rt_path.cpp  rt_path.h  rt_sys.cpp  rt_sys.h  rt_time.cpp  rt_time.h
src/runtime/public/: leanclr.hpp
src/runtime/public_impl/: leanclr.cpp  leanclr_hpp.cpp
src/runtime/utils/: binary_reader.h  hash_util.h  hashmap.h  hashset.h  mem_op.h  not_free_list.h  platform.h  rt_span.h  rt_unique_ptr.h  rt_vector.h  safegptrarray.h  string_builder.h  string_util.cpp  string_util.h
src/runtime/vm/: appdomain.cpp  appdomain.h  array_class.cpp  array_class.h  assembly.cpp  assembly.h  class.cpp  class.h  customattribute.cpp  customattribute.h  debugger.cpp  debugger.h  delegate.cpp  delegate.h  enum.cpp  enum.h  environment.cpp  environment.h  field.cpp  field.h  gc.cpp  gc.h  gchandle.cpp  gchandle.h  generic_class.cpp  generic_class.h  generic_method.cpp  generic_method.h  internal_calls.cpp  internal_calls.h  intrinsics.cpp  intrinsics.h  marshal.cpp  marshal.h  method.cpp  method.h  monitor.cpp  monitor.h  object.cpp  object.h  (+27 more)
src/samples/custom-pinvoke-wasm/: CMakeLists.txt  build.bat  main.cpp
src/samples/custom-pinvoke-x64/: CMakeLists.txt  main.cpp  run.bat
src/samples/simple-aot/: CMakeLists.txt  build.bat  gen_cpp.bat  main.cpp  run.bat
src/samples/startup/: CMakeLists.txt  main.cpp
src/tests/: run_tests.bat
src/tests/basic_test_runner/: CMakeLists.txt  main.cpp
(+127 files in other folders)
